# fretted

./: LICENSE  Makefile  README.md  demo.ly  fretted.cabal  lilyize.sh  main.hs
Fretted/: Basic.hs  LilyPond.hs
