name:           fretted
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
Category:       Music
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:     
    Fretted.Basic
    Fretted.LilyPond

  default-language: Haskell2010
  build-depends:      
    base >=4.6 && <4.7

executable main
  main-is: main.hs
  default-language: Haskell2010
  build-depends:      
    fretted == 0.1.0.0,
    base    >= 4.6 && <4.7
